fix buttons menu and search form z-index problem

--- a/style.css
+++ b/style.css
@@ -774,6 +774,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 	}
 	#bg-searchform-mobile{
 		transition: ease .5s;
+		z-index: 1029;
 	}
 	#searchform-mobile{
 		width: 100%;
@@ -784,7 +785,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 		top: 46%;
 		left: 0;
 		transform: translate(0%, -50%);
-		z-index: 10000;
+		z-index: 1029;
 	}
 	#bg-menu-mobile{
 		position: fixed;
@@ -792,7 +793,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 		left: 0;
 		width: 100%;
 		height: 0px;
-		z-index: 1029;
+		z-index: 1030;
 		transition: ease .5s;
 	}
 /*15) Carousel*/
